[gd_scene load_steps=6 format=3 uid="uid://dul6k01rd31do"]

[ext_resource type="Script" path="res://view/AddTimerView/add_timer_view.gd" id="1_p7im4"]
[ext_resource type="Theme" uid="uid://cwmjrgohke0do" path="res://theme/main_theme.tres" id="1_u5vcn"]
[ext_resource type="ButtonGroup" uid="uid://d3hanvre7evek" path="res://resource/timer_type_button_group.tres" id="2_ccwl0"]
[ext_resource type="Texture2D" uid="uid://6v0n06pl4kgd" path="res://asset/img/button-add.png" id="4_2bvq2"]
[ext_resource type="Texture2D" uid="uid://b87q0sh7t3huw" path="res://asset/img/button-close.png" id="5_fngt3"]

[node name="AddTimerView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_u5vcn")
script = ExtResource("1_p7im4")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "New Timer"
horizontal_alignment = 1

[node name="TitleLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
placeholder_text = "Title"
alignment = 1

[node name="TimerTypeSimpleButton" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
button_group = ExtResource("2_ccwl0")
text = "Simple Timer"

[node name="TimerSimpleSetupHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HourSpinBox" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/TimerSimpleSetupHBox"]
unique_name_in_owner = true
layout_mode = 2
max_value = 99.0
alignment = 1
suffix = ":"
custom_arrow_step = 1.0

[node name="MinuteSpinBox" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/TimerSimpleSetupHBox"]
unique_name_in_owner = true
layout_mode = 2
max_value = 99.0
alignment = 1
suffix = ":"
custom_arrow_step = 1.0

[node name="SecondSpinBox" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/TimerSimpleSetupHBox"]
unique_name_in_owner = true
layout_mode = 2
max_value = 99.0
alignment = 1
custom_arrow_step = 1.0

[node name="TimerTypeGroupButton" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_group = ExtResource("2_ccwl0")
text = "Timer Group"

[node name="TimerGroupSetupHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/TimerGroupSetupHBox"]
layout_mode = 2
text = "Sequential"

[node name="AddTimerButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Add Timer"
icon = ExtResource("4_2bvq2")

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"
icon = ExtResource("5_fngt3")

[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/TitleLineEdit" to="." method="_on_title_line_edit_text_changed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/TimerTypeSimpleButton" to="." method="_on_timer_type_simple_button_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/AddTimerButton" to="." method="_on_add_timer_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
